# reminderer

./: Makefile.am  README.md  autogen.sh  configure.ac
archlinux/: PKGBUILD
data/: Makefile.am  reminderer-autostart.desktop.in  reminderer.1  reminderer.desktop.in
debian/: Makefile.am  changelog  control  copyright  menu  rules
po/: POTFILES.in  pl.po
src/: Makefile.am  event_edit.c  event_edit.h  event_edit.ui  eventlists.c  eventlists.h  eventstore.c  eventstore.h  preferences.c  preferences.h  reminderer.c  reminderer.gresource.xml  reminderer.h  reminderer.ui  reminderer_event.c  reminderer_event.h  window_about.c  window_about.h  window_about.ui  window_help.c  window_help.h  window_help.ui  window_prefs.c  window_prefs.h  window_prefs.ui
win/: build_package.bat  config.h  iexpress.sed  reminderer.inf  reminderer.rc  reminderer.sln  reminderer.vcxproj  winmain.cpp
